Creato con Colaboratory

--- a/Anomaly-Transformers/Anomaly_Transformer.ipynb
+++ b/Anomaly-Transformers/Anomaly_Transformer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpTaBBJa4C9k/pxJlTEPri",
+      "authorship_tag": "ABX9TyPY237YKMGYsumyVynAeirI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,38 +24,33 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/antonioalbanese/Time-Series-Anomaly-Detection-An-experimental-survey/blob/main/Anomaly-Transofrmers/Anomaly_Transofrmer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/antonioalbanese/Time-Series-Anomaly-Detection-An-experimental-survey/blob/main/Anomaly-Transformers/Anomaly_Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R9R73RnMuTSr",
-        "outputId": "34364869-144d-40de-fcb7-1f9328928161"
+        "outputId": "97ac9e72-2f14-4d80-ef1d-a0673196fe38"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Anomaly-Transformer'...\n",
-            "remote: Enumerating objects: 122, done.\u001b[K\n",
-            "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Total 122 (delta 25), reused 17 (delta 17), pack-reused 90\u001b[K\n",
-            "Receiving objects: 100% (122/122), 26.66 MiB | 38.94 MiB/s, done.\n",
-            "Resolving deltas: 100% (51/51), done.\n",
-            "/content/Anomaly-Transformer\n"
+            "fatal: destination path 'Time-Series-Anomaly-Detection-An-experimental-survey' already exists and is not an empty directory.\n",
+            "/content/Time-Series-Anomaly-Detection-An-experimental-survey/Anomaly-Transformers/Anomaly-Transformer-main\n"
           ]
         }
       ],
       "source": [
-        "!git clone https://github.com/thuml/Anomaly-Transformer\n",
-        "%cd Anomaly-Transformer/"
+        "!git clone https://github.com/antonioalbanese/Time-Series-Anomaly-Detection-An-experimental-survey/\n",
+        "\n",
+        "%cd Time-Series-Anomaly-Detection-An-experimental-survey/Anomaly-Transformers/Anomaly-Transformer-main"
       ]
     },
     {
@@ -72,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kPnt30P5x33h",
-        "outputId": "6d50ee8e-e37f-47b9-83b5-aaeb651295ae"
+        "outputId": "c2f0c75c-4528-47e0-89c4-b2a19f1c21c1"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,8 +77,8 @@
           "text": [
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ZCLBU_pKTbsPlcj_LwxZE3IRy6mrlys3\n",
-            "To: /content/Anomaly-Transformer/dataset/MSL.zip\n",
-            "\r  0% 0.00/767k [00:00<?, ?B/s]\r100% 767k/767k [00:00<00:00, 123MB/s]\n"
+            "To: /content/Time-Series-Anomaly-Detection-An-experimental-survey/Anomaly-Transformers/Anomaly-Transformer-main/dataset/MSL.zip\n",
+            "\r  0% 0.00/767k [00:00<?, ?B/s]\r100% 767k/767k [00:00<00:00, 136MB/s]\n"
           ]
         }
       ]
@@ -152,15 +147,15 @@
         "parser.add_argument('--anormly_ratio', type=float, default=4.00)\n",
         "\n",
         "args = \"--lr 1e-4 \\\n",
-        "    --num_epochs 3 \\\n",
+        "    --num_epochs 10 \\\n",
         "    --k 3 \\\n",
         "    --win_size 100 \\\n",
         "    --input_c 55 \\\n",
         "    --output_c 55 \\\n",
         "    --batch_size 256 \\\n",
-        "    --pretrained_model None \\\n",
+        "    --pretrained_model 20 \\\n",
         "    --dataset MSL \\\n",
-        "    --mode train\\\n",
+        "    --mode test\\\n",
         "    --data_path ./dataset/MSL \\\n",
         "    --model_save_path checkpoints \\\n",
         "    --anormly_ratio 1\"\n",
@@ -178,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XDOGTancu9fO",
-        "outputId": "42cf5a4f-b4f4-4c87-b606-f53f9850bf3e"
+        "outputId": "7b7371bc-ae66-4f86-806d-8900e371548d"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,36 +189,38 @@
             "train: (58317, 55)\n",
             "test: (73729, 55)\n",
             "train: (58317, 55)\n",
-            "======================TRAIN MODE======================\n",
-            "\tspeed: 0.6579s/iter; left time: 384.8585s\n",
-            "\tspeed: 0.6773s/iter; left time: 328.4829s\n",
-            "Epoch: 1 cost time: 152.59120202064514\n",
-            "Epoch: 1, Steps: 228 | Train Loss: -42.1041788 Vali Loss: -45.4377022 \n",
-            "Validation loss decreased (inf --> -45.437702).  Saving model ...\n",
-            "Updating learning rate to 0.0001\n",
-            "\tspeed: 1.4754s/iter; left time: 526.7239s\n",
-            "\tspeed: 0.6936s/iter; left time: 178.2670s\n",
-            "Epoch: 2 cost time: 157.59030771255493\n",
-            "Epoch: 2, Steps: 228 | Train Loss: -47.5018357 Vali Loss: -46.0409565 \n",
-            "EarlyStopping counter: 1 out of 3\n",
-            "Updating learning rate to 5e-05\n",
-            "\tspeed: 1.4808s/iter; left time: 191.0202s\n",
-            "\tspeed: 0.6933s/iter; left time: 20.1051s\n",
-            "Epoch: 3 cost time: 157.53933358192444\n",
-            "Epoch: 3, Steps: 228 | Train Loss: -47.7976447 Vali Loss: -46.2894040 \n",
-            "EarlyStopping counter: 2 out of 3\n",
-            "Updating learning rate to 2.5e-05\n"
+            "======================TEST MODE======================\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/torch/nn/_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='none' instead.\n",
+            "  warnings.warn(warning.format(ret))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Threshold : 0.00425358126405618\n",
+            "pred:    (73700,)\n",
+            "gt:      (73700,)\n",
+            "pred:  (73700,)\n",
+            "gt:    (73700,)\n",
+            "Accuracy : 0.9842, Precision : 0.9158, Recall : 0.9364, F-score : 0.9260 \n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<solver.Solver at 0x7fd850d41310>"
+              "<solver.Solver at 0x7f7ac4a35750>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     }
