Creato con Colaboratory

--- a/results_visualization.ipynb
+++ b/results_visualization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNusaBHqsWU5G7C5NKkZs9Z",
+      "authorship_tag": "ABX9TyOeX1GED3XbpfmTz0Jd23Z5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -526,7 +526,7 @@
         "      points[el] += i\n",
         "      points_wtime[el] += i\n",
         "    for i,el in enumerate(time['METHOD']):\n",
-        "      points_wtime[el] += i\n",
+        "      points_wtime[el] += i/4\n",
         "  print(\"------- {} -------\".format(d))\n",
         "  print(\"Best w/o time: {}\".format(max(points, key=points.get)))\n",
         "  print(\"Best w/ time: {}\".format(max(points_wtime, key=points_wtime.get)))\n",
@@ -538,9 +538,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JBx1XYa82C9V",
-        "outputId": "e5ed45b3-2153-49c3-c6a7-409eba368488"
+        "outputId": "88740d1d-4312-466c-c00c-edb24f42d08e"
       },
-      "execution_count": 151,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
             "\n",
             "------- NAB_TEMP -------\n",
             "Best w/o time: USAD\n",
-            "Best w/ time: DEEPANT\n",
+            "Best w/ time: USAD\n",
             "\n",
             "\n",
             "------- MSL -------\n",
